# sector-relative-valuation

./: .env.example  .envrc  .gitignore  BACKTEST.md  DEPLOYMENT.md  Dockerfile  EFFICIENCY_AND_ACCURACY_IMPROVEMENTS.md  LICENSE  README.md  STRATEGY.md  THE_PLAN.md  app.js  backtest_results.csv  docker-compose.yml  index.html  industry_analysis.csv  jobspec.nomad.hcl  justfile  nomad_jobspec.hcl  package-lock.json  package.json  packer.pkr.hcl  pyproject.toml  sector_analysis.csv  sector_analysis_full.csv  weights.csv  wrangler.jsonc
.github/workflows/: deploy-worker.yml  docker-build.yml  docker-publish.yml  run-and-commit.yml  test.yml
data/: russell1000.csv
data/processed/: industry_analysis.csv
functions/api/: yf.js
public/: sector_analysis.csv  sector_analysis_full.csv  weights.csv
scripts/: refresh_sector.py
src/: backtest.py  dashboard.py  data.py  generate_weights.py  main.py  pit_fundamentals.py  regression.py  worker.js
web/: app.js  styles.css
