[tool.poetry]
name = "quantsystem"
version = "0.1.0"
description = ""
authors = ["Mack Haymond <mack.haymond@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.49"
pandas = "^2.2.3"
scipy = "^1.14.1"
aiohttp = "^3.11.2"
asyncio = "^3.4.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
plotly = "^5.24.1"
dash = "^2.18.2"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
