[project]
name = "sector-relative-valuation"
version = "0.1.0"
description = "Sector-relative equity valuation model using Ridge-weighted factor scores and within-sector z-scoring across 11 GICS sectors."
authors = [
    { name = "Mack Haymond", email = "mack.haymond@icloud.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "yfinance>=0.2.49,<0.3",
    "pandas>=2.2.3,<3",
    "scipy>=1.14.1,<2",
    "aiohttp>=3.11.2,<4",
    "asyncio>=3.4.3,<4",
    "numpy>=2.1.3,<3",
    "scikit-learn>=1.5.2,<2",
    "matplotlib>=3.9.2,<4",
    "seaborn>=0.13.2,<0.14",
    "statsmodels>=0.14.4,<0.15",
    "plotly>=5.24.1,<6",
    "dash>=2.18.2,<3",
    "tqdm>=4.67.0,<5",
    "simfin>=1.0.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.21.1,<2",
]

[tool.uv]
package = false
